# fleet_management_system

./: .gitmodules  Dockerfile  Dockerfile-fleet-manager  README.md
.github/workflows/: fleet-manager.yml
config/wireguard/: client.conf  cyclonedds.xml  env.sh  server.conf
config/zenoh/: client.json5  server.json5
src/ff_tb3_gz/: CMakeLists.txt  package.xml
src/ff_tb3_gz/launch/: ff_client.launch.xml  ff_server.launch.xml  generic_robot_launch.xml.template  icclab.launch.xml  icclab_hardware.launch.xml  icclab_multi_robot_gz.launch.xml  icclab_single_robot.launch.xml  icclab_single_robot_gz.launch.xml  navigation2.launch.py  spawn_turtlebot3.launch.py  turtleworld.launch.xml
src/ff_tb3_gz/params/: turtlebot3_world_burger_robot2.yaml
src/ff_tb3_gz/script/: fleet_to_rmf_transform.py
src/free_fleet_rmf_adapter/: config.yaml  package.xml  setup.cfg  setup.py
src/free_fleet_rmf_adapter/launch/: adapter.launch.xml
src/free_fleet_rmf_adapter/src/: adapter.py  configuration.py
src/icclab_maps/: CMakeLists.txt  package.xml
src/icclab_maps/launch/: icclab_world.launch.xml
src/icclab_maps/maps/icclab/: icclab.building.yaml  icclab_gz_based.pgm  icclab_gz_based_robot1.yaml  icclab_gz_based_robot2.yaml
src/rmf_ff_tb3/: CMakeLists.txt  package.xml
src/rmf_ff_tb3/launch/: ff_client.launch.xml  ff_server.launch.xml  generic_robot_launch.xml.template  icclab_multi_robot_gz.launch.xml  icclab_single_robot_gz.launch.xml  localization_launch.py  navigation2.launch.py  spawn_turtlebot3.launch.py  turtleworld.launch.xml
src/rmf_ff_tb3/models/: robot1.sdf  robot1_no_namespace.sdf  robot2.sdf
