<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_tb3_gz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="roscon@todo.todo">roscon</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>free_fleet_client_ros2</exec_depend>
  <exec_depend>free_fleet_server_ros2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
