<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>free_fleet_rmf_adapter</name>
  <version>0.1.0</version>
  <description>Adapater that connects Open-RMF and Free Fleet to enable fleet management.</description>
  <maintainer email="hussein.kabbout@hotmail.com">Hussein Kabbout</maintainer>
  <maintainer email="sassanav@students.zhaw.ch">Navid Sassan</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
